// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cumulative Analytics tests render component 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-small"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main analyticsContainer StyledProps--background-white"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-h6"
            data-tooltip-id="summaryOfRulesHeader"
          >
            ce.co.summarySection.sectionHeader
          </p>
          <p
            class="StyledProps--font StyledProps--main pointerCursor StyledProps--color StyledProps--color-primary7"
            style="display: flex; align-items: center;"
          >
            ce.common.collapse
            <span
              class="bp3-icon StyledProps--main Text--icon StyledProps--padding-left-xsmall StyledProps--color StyledProps--color-primary7"
              data-icon="main-chevron-up"
            >
              <svg
                height="12"
                viewBox="0 0 14 8"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.7 6.3l-6-6C7.5.1 7.3 0 7 0s-.5.1-.7.3l-6 6c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3L7 2.4l5.3 5.3c.2.2.4.3.7.3.6 0 1-.4 1-1 0-.3-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </p>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--margin-right-xxxlarge"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main timeRangeButton StyledProps--intent-primary StyledProps--padding-small Button--with-current-color Button--without-shadow Button--withLeftIcon Button--withRightIcon"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-calendar StyledProps--main StyledProps--padding-right-xsmall"
                  icon="calendar"
                >
                  <svg
                    data-icon="calendar"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      calendar
                    </desc>
                    <path
                      d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  projectsOrgs.landingDashboard.last30Days
                </span>
                <span
                  class="bp3-icon bp3-icon-caret-down StyledProps--main"
                  icon="caret-down"
                >
                  <svg
                    data-icon="caret-down"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      caret-down
                    </desc>
                    <path
                      d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-xxlarge StyledProps--main"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-flex-start"
          style="flex: 1;"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-h6 StyledProps--color StyledProps--color-grey500"
            >
              ce.co.summarySection.savingsPercentage
            </p>
            <div />
          </div>
          <div>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-h6 StyledProps--color StyledProps--color-grey500"
            >
              ce.co.activeModeLabel
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-h2 StyledProps--color StyledProps--color-grey600"
              >
                0
              </p>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                style="align-self: center;"
              >
                ce.co.rules
              </p>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          style="flex: 3;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-h6 StyledProps--color StyledProps--color-grey500"
          >
            ce.co.summarySection.graphHeader
          </p>
          <div />
        </div>
        <div
          class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-flex-start"
          style="flex: 1;"
        >
          <div
            class="totalSavingsInfoCard"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-h6 StyledProps--color StyledProps--color-grey700"
              >
                ce.co.summarySection.totalSavings
              </p>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-h2 StyledProps--color StyledProps--color-grey700"
              >
                $21
              </p>
            </div>
          </div>
          <div
            class="totalSpendInfoCard"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-h6 StyledProps--color StyledProps--color-grey500"
              >
                ce.co.summarySection.totalSpend
              </p>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--color StyledProps--color-grey500"
              >
                $0
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cumulative Analytics tests render component in Dry run mode 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-small"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main analyticsContainer StyledProps--background-white"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-h6"
            data-tooltip-id="summaryOfRulesHeader"
          >
            ce.co.summarySection.sectionHeader
          </p>
          <p
            class="StyledProps--font StyledProps--main pointerCursor StyledProps--color StyledProps--color-primary7"
            style="display: flex; align-items: center;"
          >
            ce.common.collapse
            <span
              class="bp3-icon StyledProps--main Text--icon StyledProps--padding-left-xsmall StyledProps--color StyledProps--color-primary7"
              data-icon="main-chevron-up"
            >
              <svg
                height="12"
                viewBox="0 0 14 8"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.7 6.3l-6-6C7.5.1 7.3 0 7 0s-.5.1-.7.3l-6 6c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3L7 2.4l5.3 5.3c.2.2.4.3.7.3.6 0 1-.4 1-1 0-.3-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </p>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--margin-right-xxxlarge"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main timeRangeButton StyledProps--intent-primary StyledProps--padding-small Button--with-current-color Button--without-shadow Button--withLeftIcon Button--withRightIcon"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-calendar StyledProps--main StyledProps--padding-right-xsmall"
                  icon="calendar"
                >
                  <svg
                    data-icon="calendar"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      calendar
                    </desc>
                    <path
                      d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  projectsOrgs.landingDashboard.last30Days
                </span>
                <span
                  class="bp3-icon bp3-icon-caret-down StyledProps--main"
                  icon="caret-down"
                >
                  <svg
                    data-icon="caret-down"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      caret-down
                    </desc>
                    <path
                      d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-xxlarge StyledProps--main"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-flex-start"
          style="flex: 1;"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-h6 StyledProps--color StyledProps--color-grey500"
            >
              ce.co.summarySection.dryRunSavingsPercentage
            </p>
            <div />
          </div>
          <div>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-h6 StyledProps--color StyledProps--color-grey500"
            >
              ce.co.dryRunModeLabel
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-h2 StyledProps--color StyledProps--color-grey600"
              >
                0
              </p>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                style="align-self: center;"
              >
                ce.co.rules
              </p>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          style="flex: 3;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-h6 StyledProps--color StyledProps--color-grey500"
          >
            ce.co.summarySection.dryRunGraphHeader
          </p>
          <div />
        </div>
        <div
          class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-flex-start"
          style="flex: 1;"
        >
          <div
            class="totalSavingsInfoCardDryRun"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-h6 StyledProps--color StyledProps--color-grey700"
              >
                ce.co.summarySection.dryRunSavings
              </p>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-h2 StyledProps--color StyledProps--color-grey700"
              >
                $21
              </p>
            </div>
          </div>
          <div
            class="totalSpendInfoCardDryRun"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-h6 StyledProps--color StyledProps--color-grey500"
              >
                ce.co.summarySection.dryRunSpend
              </p>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--color StyledProps--color-grey500"
              >
                $0
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cumulative Analytics tests spend vs savings chart tests render area chart for range greater than 30 days 1`] = `
<div>
  <div />
</div>
`;
